# roboracing-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Drive_Motor_Config-3-2-2025.xml  Drive_Motor_Config-4-21-2024.xml  Drive_VESC_App_Config-11-17-2024.xml  Drive_VESC_App_Config-3-2-2025.xml  Drive_VESC_App_Config-4-21-2024.xml  Makefile-backup  README.md  Steering_Motor_Config-10-27-2024.xml  Steering_VESC_App_Config-10-27-2024.xml  makefile  mbed-run  template.make
.circleci/: config.yml
XBee_EStop_Remote/: XBee_EStop_Remote.ino
archive/macaroni/: README.md
bigoli/bigoli_chassis/: bigoli_chassis
bigoli_firmware/: RR_Firmware.uvoptx  RR_Firmware.uvprojx  main.cpp  mbed.bld
bigoli_firmware/mbed/: mbed.h
carwars/: CMakeLists.txt  README.md  bigoli-firmware.cpp  bigoli-steering-control.cpp  makefile
carwars/basic-functions/: ethernet-test-desktop-client.py  ethernet-test.cpp  neopixel-use.cpp  steering-power-input.cpp  steering-target-input.cpp  steering-test.cpp
carwars/bigoli-motor-control/: bigoli-motor-control.ino
carwars/bigoli-motor-ino/: bigoli-motor-ino.ino
carwars/bigoli-steering-control/: bigoli-steering-control.ino
carwars/bigoli-test-ino/: bigoli_test.ino
carwars/firmware/bigoli_test/: bigoli_test.ino
carwars/firmware/robot2015/: CMakeLists.txt
carwars/firmware/robot2015/src-ctrl/: main.cpp
carwars/mbed/ethernet/: bigoli-firmware.cpp  drive-power-input-eth.cpp  encoder-test.cpp  steering-angle-readout.cpp
carwars/mbed/usb/: drive-motor-forward-backward-cycle.cpp  steer-motor-forward-backward-cycle.cpp  steering-power-input.cpp
carwars/run/: README.md
filini/manual-control/: Pulse.cpp  Pulse.lib  main.cpp
firmware/: CMakeLists.txt
firmware/mbed-common/: CMakeLists.txt
neopixel-board/: neopixel_testLast.ino
rigatoni/: DriveBreaMap.txt  RoboRacing_Odrive_Braking_Config_endstop.json  RoboRacing_Odrive_Braking_Config_no_endstop.json  RoboRacing_Odrive_Config_100A_CurrLimit.json  RoboRacing_Odrive_Config_2.json  RoboRacing_Odrive_Steering_Config_100A_CurrLimit.json  braking_config_endstops_running.json  odrive_links.md  steering_25_apr_2022.json  steering_25_apr_2022_endstops.json  steering_25_apr_2022_endstops_axis1.json  steering_25_apr_7pm_broken.json
sedani/: ReadSpeedValues.m  Sedani PWM Table.xlsx  data1.txt  data2.txt  data3.txt
test/: ethernet-test-desktop-client.py  ethernet-viewer.py
util/: requirements2.txt  ubuntu-packages.txt  ubuntu-setup
(+200 files in other folders)
